make table displayed elements layout-fixed, reduce font size for stirng values, add word wrapping

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -51,10 +51,11 @@ $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !def
 $font-family-base:        $font-family-sans-serif !default;
 
 $font-size-base:          12px !default;
-$font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-huge:		  ceil(($font-size-base * 2)) !default; // 28px
-$font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
-$font-size-gigantic:      34px !default; // ~42px
+$font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~11px
+$font-size-medium:        ceil(($font-size-base * 1.25)) !default; // ~15px
+$font-size-large:         ceil(($font-size-base * 1.6)) !default; // ~20px
+$font-size-huge:		  ceil(($font-size-base * 2.1)) !default;  // 26px
+$font-size-gigantic:      ceil(($font-size-base * 2.8)) !default;  // ~34px
 
 $font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
 $font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
@@ -216,7 +217,7 @@ $input-color-placeholder:        #999 !default;
 //** Default `.form-control` height
 $input-height-base:              ($line-height-computed + ($padding-base-vertical * 2) + 2) !default;
 //** Large `.form-control` height
-$input-height-large:             (ceil($font-size-large * $line-height-large) + ($padding-large-vertical * 2) + 2) !default;
+$input-height-large:             (ceil($font-size-medium * $line-height-large) + ($padding-large-vertical * 2) + 2) !default;
 //** Small `.form-control` height
 $input-height-small:             (floor($font-size-small * $line-height-small) + ($padding-small-vertical * 2) + 2) !default;
 
